--- a/index.css
+++ b/index.css
@@ -30,3 +30,16 @@
     height: 20px;
     align-items: center;
 }
+.image {
+    display: flex;
+    gap: 10px;
+}
+.hai_hinh_tren {
+    display: flex;
+    gap: 10px;
+}
+.hai_hinh_duoi {
+    display: flex;
+    gap: 10px;
+    margin-top: 12px;
+}
